--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,10 +14,15 @@ help:
 
 .PHONY: help Makefile
 
-api-docs:
-	sphinx-apidoc --output-dir . ..
-
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+api-docs:
+	sphinx-apidoc --output-dir . ..
+
+clean:
+	@$(SPHINXBUILD) -M clean "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O);
+	cd _build; git worktree add -f html gh-pages
+
