--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,12 +25,12 @@ jobs:
           git config user.name "Aya Elsayed"
       - name: Sphinx build
         run: |
-          git worktree add docs/_build gh-pages
+          git worktree add docs/_build/html gh-pages
           cd docs
           make html
       - name: Deploy docs
         run: |
-          cd docs/_build
+          cd docs/_build/html
           git add --all
           git commit -m "deploy documentation updates"
           git push origin gh-pages
